# password-out

./: .gitignore  Cargo.toml  README.md  USERGUIDE.md
docs/: ATOMIC_WRITES.md  CAC_ARCHITECTURE.md  DEVELOPER.md  INSTALLATION.md  VAULT_RECOVERY.md
examples/: generate-man.rs
src/: app.rs  cli.rs  entries.rs  expiration.rs  lib.rs  main.rs  vault_core.rs
src/certificate/: cac.rs  identity.rs  key_wrap.rs  mod.rs  pfx.rs  provider.rs  self_signed.rs  service.rs
src/clipboard/: macos.rs  mod.rs  windows.rs
src/hotkey/: macos.rs  mod.rs  windows.rs
src/overlay/: macos.rs  macos.rs.bak  mod.rs  windows.rs  workdir.code-workspace
src/providers/: file.rs
src/smartcard/: apdu.rs  certificate.rs  mod.rs  pcsc.rs  piv.rs  tlv.rs  wrapping.rs
src/vault/: access.rs  commands.rs  crypto.rs  entry_ops.rs  format.rs  mod.rs  password.rs  service.rs  storage.rs
