[package]
name = "password-out"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A cross-platform, hotkey-driven credential manager"
repository = "https://github.com/tobymoreno/password-out"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "6"
global-hotkey = "0.7"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6.1"
windows-sys = { version = "0.61", features = [
"Win32_Foundation",
"Win32_Graphics_Gdi",
"Win32_UI_Input_KeyboardAndMouse",
"Win32_UI_WindowsAndMessaging",
"Win32_System_LibraryLoader",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(cargo_clippy)"] }






