[package]
name = "password-out"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A cross-platform, hotkey-driven credential manager"
repository = "https://github.com/tobymoreno/password-out"
default-run = "password-out"
authors = [
"PITT Crew: Roland, Toby, Paul, and Joey",
]

[features]
default = []
dev-tools = []

[[bin]]
name = "cert_test"
path = "src/bin/cert_test.rs"
required-features = ["dev-tools"]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "6"
global-hotkey = "0.7"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
pcsc = "2.9"
anyhow = "1"
flate2 = "1.1.9"
x509-parser = "0.18"
sha2 = "0.11.0"
rsa = { version = "0.9.10", features = ["sha2"] }
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6.1"
windows-sys = { version = "0.61", features = [
"Win32_Foundation",
"Win32_Graphics_Gdi",
"Win32_UI_Input_KeyboardAndMouse",
"Win32_UI_WindowsAndMessaging",
"Win32_System_LibraryLoader",
"Win32_Storage_FileSystem",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dev-dependencies]
clap_mangen = "0.2"
